--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <section class="pt-page" data-id="resume">
               <div class="section-inner custom-page-content">
                 <div class="page-header color-1">
-                  <h2>Currículo</h2>
+                  <h2>Curriculum</h2>
                 </div>
                 <div class="page-content">
 
@@ -165,16 +165,16 @@
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
                         <div class="block-title">
-                          <h3>Educação</h3>
+                          <h3>Education</h3>
                         </div>
 
                         <div class="timeline">
                           <!-- Education 1 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Specialization Course</h4>
-                            <span class="item-period">2010</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Bachelor of Computational Mathematics</h4>
+                            <span class="item-period">2013-2018</span>
+                            <span class="item-small">UFPB</span>
+                            <p class="item-description">Graduation in Federal University of Paraíba, João Pessoa - PB.</p>
                           </div>
                           <!-- / Education 1 -->
 
@@ -202,7 +202,7 @@
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
                         <div class="block-title">
-                          <h3>Experiência Profissional</h3>
+                          <h3>Professional Experience</h3>
                         </div>
 
                         <div class="timeline">
@@ -296,7 +296,7 @@
                     <div class="col-sm-12 col-md-12 col-lg-12">
                       <div class="block">
                         <div class="center download-resume">
-                          <a href="cv/resume.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
+                          <a href="cv/cv_edvaldo_melo.pdf" class="btn btn-secondary" target="_blank">Download CV</a>
                         </div>
                       </div>
                     </div>
