Editing in services provided

--- a/index.html
+++ b/index.html
@@ -313,14 +313,14 @@
             <section class="pt-page" data-id="services">
               <div class="section-inner custom-page-content">
                 <div class="page-header color-1">
-                  <h2>Serviços Prestados</h2>
+                  <h2>Services provided</h2>
                 </div>
                 <div class="page-content">
                   <!-- My Services -->
                   <div class="row">
                     <div class="col-sm-12 col-md-12">
                       <div class="block-title">
-                        <h3>Sou <span>boa em...</span></h3>
+                        <h3>I'm <span>good at...</span></h3>
                       </div>
                     </div>
 
