Curriculum section completed

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                           <!-- Education 1 -->
                           <div class="timeline-item">
                             <h4 class="item-title">Bachelor of Computational Mathematics</h4>
-                            <span class="item-period">2013-2018</span>
+                            <span class="item-period">2013 - 2018</span>
                             <span class="item-small">UFPB</span>
                             <p class="item-description">Graduation in Federal University of Paraíba, João Pessoa - PB.</p>
                           </div>
@@ -180,21 +180,12 @@
 
                           <!-- Education 2 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Specialization Course</h4>
-                            <span class="item-period">2010</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Master's Student in Informatics</h4>
+                            <span class="item-period">2019 - Current</span>
+                            <span class="item-small">UFPB.</span>
+                            <p class="item-description">Master's degree in the Postgraduate Program in Informatics (PPGI) - UFPB, João Pessoa - PB.</p>
                           </div>
                           <!-- / Education 2 -->
-
-                          <!-- Education 3 -->
-                          <div class="timeline-item">
-                            <h4 class="item-title">Specialization Course</h4>
-                            <span class="item-period">2010</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
-                          </div>
-                          <!-- / Education 3 -->
                         </div>
                       </div>
                     </div>
@@ -208,30 +199,14 @@
                         <div class="timeline">
                           <!-- Experience 1 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Frontend-developer</h4>
-                            <span class="item-period">Dec 2012 - Current</span>
-                            <span class="item-small">Web Agency</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Machine Learning and Digital Petrophysics</h4>
+                            <span class="item-period">2017 - 2020</span>
+                            <span class="item-small">LaMEP</span>
+                            <p class="item-description">Member of the research team, developing a research project for CENPES/PETROBRÁS. <br>
+                              <a href="http://lamep.ci.ufpb.br/" target="_blank">LaMEP</a> Website.
+                            </p>
                           </div>
                           <!-- / Experience 1 -->
-
-                          <!-- Experience 2 -->
-                          <div class="timeline-item">
-                            <h4 class="item-title">Web Designer</h4>
-                            <span class="item-period">Dec 2011 - Nov 2012</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
-                          </div>
-                          <!-- / Experience 2 -->
-
-                          <!-- Experience 3 -->
-                          <div class="timeline-item">
-                            <h4 class="item-title">Graphic Designer</h4>
-                            <span class="item-period">Jan 2010 - Dec 2011</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
-                          </div>
-                          <!-- / Experience 3 -->
                         </div>
                       </div>
                     </div>
@@ -241,24 +216,48 @@
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
                         <div class="block-title">
-                          <h3>Design <span>Skills</span></h3>
+                          <h3>Published Articles</h3>
                         </div>
 
-                        <div class="skills-info">
-                          <h4>Web Design</h4>                               
-                          <div class="skill-container">
-                            <div class="skill-percentage skill-1"></div>
+                        <div class="timeline">
+                          <!-- Article 1 -->
+                          <div class="timeline-item">
+                            <h4 class="item-title">Automatic Classification of Hydrocarbon “leads” in Seismic Images Through Artificial
+                                                   and Convolutional Neural Networks</h4>
+                            <span class="item-period">2019</span>
+                            <span class="item-small">Computers & Geosciences</span>
+                            <p class="item-description">Use of CNN and MLP for a seismic images classification problem. Comparison between
+                              both neural networks.<br>
+                              <a href="https://www.sciencedirect.com/science/article/pii/S0098300419300263" target="_blank">Article</a> Link.
+                            </p>
                           </div>
+                          <!-- / Article 1 -->
 
-                          <h4>Graphic Design</h4>
-                          <div class="skill-container">
-                            <div class="skill-percentage skill-2"></div>
+                          <!-- Article 2 -->
+                          <div class="timeline-item">
+                            <h4 class="item-title">Predominant Pore Direction: A 2D Thin Section Approach Applied to Reservoir Rock Core Samples</h4>
+                            <span class="item-period">2019</span>
+                            <span class="item-small">10º PDPetro</span>
+                            <p class="item-description">Sorts the Direction (Vertical, Horizontal, Diagonal) of Each Pixel in a 2D Image.<br>
+                              <a href="http://www.portalabpg.org.br/site_portugues/anais/anais10/repositorio/trabalho/025502190820199193.pdf" target="_blank">Article</a> Link.
+                              <a href="http://www.portalabpg.org.br/site_portugues/eventos.html" target="_blank">ABPG</a> website.
+                            </p>
                           </div>
+                          <!-- / Article 2 -->
 
-                          <h4>Print Design</h4>
-                          <div class="skill-container">
-                            <div class="skill-percentage skill-3"></div>
-                          </div> 
+                          <!-- Article 3 -->
+                          <div class="timeline-item">
+                            <h4 class="item-title">Identifying the Predominant Pore Directions in a Porous Medium: An Application to 
+                              Reservoir Rock Core Samples</h4>
+                            <span class="item-period">2020</span>
+                            <span class="item-small">EAGE</span>
+                            <p class="item-description">Sorts the Direction (Vertical, Horizontal, Diagonal) of Each Voxel in a 3D Image.
+                              Two Study Case: Berea Sandstone and CarbonateC1.<br>
+                              <a href="https://www.earthdoc.org/content/papers/10.3997/2214-4609.2020603010" target="_blank">Article</a> Link.
+                              <a href="https://eage.eventsair.com/rock-physics-2019/" target="_blank">EAGE</a> website.
+                            </p>
+                          </div>
+                          <!-- / Article 3 -->
                         </div>
 
                       </div>
@@ -267,24 +266,50 @@
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
                         <div class="block-title">
-                          <h3>Coding <span>Skills</span></h3>
+                          <h3>Programming <span>Skills</span></h3>
                         </div>
 
                         <div class="skills-info">
-                          <h4>HTML5</h4>                               
+                          <h4>Python</h4>                               
                           <div class="skill-container">
                             <div class="skill-percentage skill-4"></div>
                           </div>
 
-                          <h4>CSS3/LESS/SASS</h4>
-                          <div class="skill-container">
-                            <div class="skill-percentage skill-5"></div>
-                          </div>
-
-                          <h4>jQuery</h4>
+                          <h4>C</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-6"></div>
                           </div> 
+
+                          <h4>Matlab</h4>                               
+                          <div class="skill-container">
+                            <div class="skill-percentage skill-1"></div>
+                          </div>
+                        </div>
+
+                        <div class="block-title">
+                          <h3>Other <span>Skills</span></h3>
+                        </div>
+
+                        <div class="skills-info">
+                          <h4>Neural Networks</h4>                               
+                          <div class="skill-container">
+                            <div class="skill-percentage skill-4"></div>
+                          </div>
+                          
+                          <h4>Numerical Simulations</h4>                               
+                          <div class="skill-container">
+                            <div class="skill-percentage skill-1"></div>
+                          </div>
+
+                          <h4>Graphs</h4>                               
+                          <div class="skill-container">
+                            <div class="skill-percentage skill-1"></div>
+                          </div>
+
+                          <h4>Image Processing</h4>                               
+                          <div class="skill-container">
+                            <div class="skill-percentage skill-2"></div>
+                          </div>
                         </div>
                         
                       </div>
