Services section changed

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                               Reservoir Rock Core Samples</h4>
                             <span class="item-period">2020</span>
                             <span class="item-small">EAGE</span>
-                            <p class="item-description">Sorts the Direction (Vertical, Horizontal, Diagonal) of Each Voxel in a 3D Image.
+                            <p class="item-description">Sorts the Direction (Vertical, Horizontal, Diagonal) of Each Pixel in a 2D Image.
                               Two Study Case: Berea Sandstone and CarbonateC1.<br>
                               <a href="https://www.earthdoc.org/content/papers/10.3997/2214-4609.2020603010" target="_blank">Article</a> Link.
                               <a href="https://eage.eventsair.com/rock-physics-2019/" target="_blank">EAGE</a> website.
@@ -354,10 +354,10 @@
                         <div class="service-info">
                           <!--<i class="service-icon fa fa-shopping-cart"></i>-->
                           <div class="service-image">
-                            <img src="images/service/web_design_icon.png" alt="Responsive Design" class="mCS_img_loaded">
+                            <img src="images/service/python_logo.png" alt="Responsive Design" class="mCS_img_loaded">
                           </div>
-                          <h4>Web Design</h4>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                          <h4>Python</h4>
+                          <p>Backend Python Developer.</p>
                         </div>
                       </div>
                     </div>
@@ -366,10 +366,10 @@
                       <div class="service-block"> 
                         <div class="service-info">
                           <div class="service-image">
-                            <img src="images/service/photography_icon.png" alt="Photography" class="mCS_img_loaded">
+                            <img src="images/service/c_language.png" alt="Photography" class="mCS_img_loaded">
                           </div>
-                          <h4>Photography</h4>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                          <h4>C</h4>
+                          <p>C Developer.</p>
                         </div>
                       </div>
                     </div>
@@ -378,10 +378,10 @@
                       <div class="service-block"> 
                         <div class="service-info">
                           <div class="service-image">
-                            <img src="images/service/creativity_icon.png" alt="Creativity" class="mCS_img_loaded">
+                            <img src="images/service/matlab_logo.png" alt="Creativity" class="mCS_img_loaded">
                           </div>
-                          <h4>Management</h4>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                          <h4>Matlab</h4>
+                          <p>Numerical Simulations with Matlab.</p>
                         </div>
                       </div>
                     </div>
@@ -390,64 +390,32 @@
                       <div class="service-block"> 
                         <div class="service-info">
                           <div class="service-image">
-                            <img src="images/service/advetising_icon.png" alt="Advetising" class="mCS_img_loaded">
+                            <img src="images/service/neural_networks.png" alt="Advetising" class="mCS_img_loaded">
                           </div>
-                          <h4>Advertising</h4>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                          <h4>Neural Networks</h4>
+                          <p>Development of Deep Neural Networks, such as CNN and LSTM, for Classification and Prediction Problems, among others.</p>
                         </div>
                       </div>
                     </div>
-                  </div>
                   <!-- End of My Services -->
 
                   <!-- Clients -->
                   <div class="row">
                     <div class="col-sm-12 col-md-12">
                       <div class="block-title">
-                        <h3>Clientes</h3>
+                        <h3>Companies / Laboratories</h3>
                       </div>
 
                       <div class="col-sm-4 col-md-2 subpage-block">
                         <div class="client-block">
-                          <a href="index.html#" target="_blank"><img src="images/clients/client_1.png" alt="image" class="mCS_img_loaded"></a>
+                          <a href="http://lamep.ci.ufpb.br/" target="_blank"><img src="images/clients/lamep.png" alt="image" class="mCS_img_loaded"></a>
                         </div>
                       </div>
-
-                      <div class="col-sm-4 col-md-2 subpage-block">
-                        <div class="client-block">
-                          <a href="index.html#" target="_blank"><img src="images/clients/client_2.png" alt="image" class="mCS_img_loaded"></a>
-                        </div>
-                      </div>
-
-                      <div class="col-sm-4 col-md-2 subpage-block">
-                        <div class="client-block">
-                          <a href="index.html#" target="_blank"><img src="images/clients/client_3.png" alt="image" class="mCS_img_loaded"></a>
-                        </div>
-                      </div>
-
-                      <div class="col-sm-4 col-md-2 subpage-block">
-                        <div class="client-block">
-                          <a href="index.html#" target="_blank"><img src="images/clients/client_4.png" alt="image" class="mCS_img_loaded"></a>
-                        </div>
-                      </div>
-
-                      <div class="col-sm-4 col-md-2 subpage-block">
-                        <div class="client-block">
-                          <a href="index.html#" target="_blank"><img src="images/clients/client_5.png" alt="image" class="mCS_img_loaded"></a>
-                        </div>
-                      </div>
-
-                      <div class="col-sm-4 col-md-2 subpage-block">
-                        <div class="client-block">
-                          <a href="index.html#" target="_blank"><img src="images/clients/client_6.png" alt="image" class="mCS_img_loaded"></a>
-                        </div>
-                      </div>
-
                     </div>
                   </div>
                   <!-- End of Clients -->
-
-                  <!-- Testimonials -->
+   
+                  <!-- Testimonials 
                   <div class="row">
                     <div class="col-sm-12 col-md-12">
                       <div class="block-title">
@@ -456,86 +424,87 @@
 
 
                       <div class="testimonials owl-carousel block">
-                        <!-- Testimonial 1 -->
-                        <div class="testimonial-item">
-                          <!-- Testimonial Author -->
-                          <div class="testimonial-credits">
-                            <!-- Picture -->
+                      -->
+                        <!-- Testimonial 1 
+                        <div class="testimonial-item"> -->
+                          <!-- Testimonial Author 
+                          <div class="testimonial-credits"> -->
+                            <!-- Picture 
                             <div class="testimonial-picture">
                               <img src="images/testimonials/testimonial_photo_1.jpg" alt="">
-                            </div>              
+                            </div>  -->   
                             <!-- /Picture -->
-                            <!-- Testimonial author information -->
+                            <!-- Testimonial author information 
                             <div class="testimonial-author-info">
                               <p class="testimonial-author">Maria Richardson</p>
                               <p class="testimonial-firm">Lindsley's Lumber</p>
                             </div>
-                          </div>
+                          </div> -->
                           <!-- /Testimonial author information -->
-                          <!-- Testimonial Content -->
+                          <!-- Testimonial Content 
                           <div class="testimonial-content">
                             <div class="testimonial-text">
                               <p>"Phasellus eu nunc tincidunt, ultricies elit vitae, pretium eros. Sed sed ipsum sed massa."</p>
                             </div>
-                          </div>            
-                          <!-- /Testimonial Content -->                
-                        </div>
+                          </div> -->      
+                          <!-- /Testimonial Content               
+                        </div> -->
                         <!-- End of Testimonial 1 -->
 
-                        <!-- Testimonial 2 -->
-                        <div class="testimonial-item">
-                          <!-- Testimonial Author -->
-                          <div class="testimonial-credits">
-                            <!-- Picture -->
+                        <!-- Testimonial 2 
+                        <div class="testimonial-item"> -->
+                          <!-- Testimonial Author 
+                          <div class="testimonial-credits"> -->
+                            <!-- Picture 
                             <div class="testimonial-picture">
                               <img src="images/testimonials/testimonial_photo_2.jpg" alt="">
-                            </div>              
+                            </div>  -->         
                             <!-- /Picture -->
-                            <!-- Testimonial author information -->
+                            <!-- Testimonial author information 
                             <div class="testimonial-author-info">
                               <p class="testimonial-author">John Doe</p>
                               <p class="testimonial-firm">Apple Inc.</p>
                             </div>
-                          </div>
+                          </div>  -->
                           <!-- /Testimonial author information -->
-                          <!-- Testimonial Content -->
+                          <!-- Testimonial Content 
                           <div class="testimonial-content">
                             <div class="testimonial-text">
                               <p>"Vivamus porta dapibus tristique. Suspendisse et arcu eget nisi convallis eleifend nec ac lorem.</p>
                             </div>
-                          </div>            
-                          <!-- /Testimonial Content -->                
-                        </div>
+                          </div>  -->      
+                          <!-- /Testimonial Content                
+                        </div>  -->
                         <!-- End of Testimonial 2 -->
 
-                        <!-- Testimonial 3 -->
-                        <div class="testimonial-item">
-                          <!-- Testimonial Author -->
-                          <div class="testimonial-credits">
-                            <!-- Picture -->
+                        <!-- Testimonial 3 
+                        <div class="testimonial-item">  -->
+                          <!-- Testimonial Author 
+                          <div class="testimonial-credits"> -->
+                            <!-- Picture 
                             <div class="testimonial-picture">
                               <img src="images/testimonials/testimonial_photo_3.jpg" alt="">
-                            </div>              
+                            </div>   -->           
                             <!-- /Picture -->
-                            <!-- Testimonial author information -->
+                            <!-- Testimonial author information 
                             <div class="testimonial-author-info">
                               <p class="testimonial-author">George McQueen</p>
                               <p class="testimonial-firm">Harmony House</p>
                             </div>
-                          </div>
+                          </div>  -->
                           <!-- /Testimonial author information -->
-                          <!-- Testimonial Content -->
+                          <!-- Testimonial Content 
                           <div class="testimonial-content">
                             <div class="testimonial-text">
                               <p>"Aliquam congue auctor lectus sed fermentum. Nulla ultricies tellus quis sapien lacinia egestas."</p>
                             </div>
-                          </div>            
-                          <!-- /Testimonial Content -->                
-                        </div>
-                        <!-- End of Testimonial 3 -->
+                          </div> -->        
+                          <!-- /Testimonial Content                
+                        </div>  -->
+                        <!-- End of Testimonial 3 
                       </div>
                     </div>
-                  </div>
+                  </div> -->
                   <!-- End of Tesimonials -->
                 </div>
               </div>
@@ -746,7 +715,7 @@
       <!-- /Main Content -->
     </div>
     <footer>
-      <div class="copyrights">&copy; Geek University</div>
+      <!--<div class="copyrights">&copy; Geek University</div>-->
     </footer>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/pages-switcher.js"></script>
