Adding CV to download in English and Portuguese

--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
                         </p>
                       </div>
                       <div class="download-resume">
-                        <a href="cv/cv_edvaldo_melo.pdf" class="btn btn-secondary" target="_blank">Download CV</a>
+                        <a href="cv/cv_edvaldo_melo_english.pdf" class="btn btn-secondary" target="_blank">Download CV</a>
+                        <a href="cv/cv_edvaldo_melo_pt-br.pdf" class="btn btn-secondary" target="_blank">Download CV (PT-BR)</a>
                       </div>
                     </div>
 
@@ -321,7 +322,8 @@
                     <div class="col-sm-12 col-md-12 col-lg-12">
                       <div class="block">
                         <div class="center download-resume">
-                          <a href="cv/cv_edvaldo_melo.pdf" class="btn btn-secondary" target="_blank">Download CV</a>
+                          <a href="cv/cv_edvaldo_melo_english.pdf" class="btn btn-secondary" target="_blank">Download CV</a>
+                          <a href="cv/cv_edvaldo_melo_pt-br.pdf" class="btn btn-secondary" target="_blank">Download CV (PT-BR)</a>
                         </div>
                       </div>
                     </div>
