--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
 
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <ul class="info-list">
-                        <li><span class="title">Idade</span><span class="value">24</span></li>
-                        <li><span class="title">Nacionalidade</span><span class="value">Brazilian</span></li>
-                        <li><span class="title">Cidade/Estado</span><span class="value">Ferreiros, PE</span></li>
-                        <li><span class="title">E-mail</span><span class="value">emeloppgi@gmail.com</span></li>
-                        <li><span class="title">Fone</span><span class="value">+5581 9 9294-6090</span></li>
+                        <li><span class="title">Age</span><span class="value">24</span></li>
+                        <li><span class="title">Nationality</span><span class="value">Brazilian</span></li>
+                        <li><span class="title">City/State</span><span class="value">Ferreiros, PE</span></li>
+                        <li><span class="title">Email</span><span class="value">emeloppgi@gmail.com</span></li>
+                        <li><span class="title">Phone</span><span class="value">+5581 9 9294-6090</span></li>
                         <!-- <li><span class="title">Freelance</span><span class="value available">Available</span></li> -->
                       </ul>
                     </div>
