--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
               <li>
                 <a class="pt-trigger" href="index.html#services">Services</a>
               </li>
-              <!--<li>
+              <li>
                 <a class="pt-trigger" href="index.html#portfolio">Portfolio</a>
-              </li>-->
+              </li>
             </ul>
             <!-- /Main menu -->
           </div>
@@ -515,47 +515,47 @@
 
 
             <!-- Portfolio Subpage -->
-            <!--<section class="pt-page" data-id="portfolio">
+            <section class="pt-page" data-id="portfolio">
               <div class="section-inner custom-page-content">
                 <div class="page-header color-1">
-                  <h2>Portfólio</h2>
+                  <h2>Portfolio</h2>
                 </div>
-                <div class="page-content"> -->
+                <div class="page-content"> 
 
                   <!-- Portfolio Content -->
-                  <!--<div class="portfolio-content"> -->
+                  <div class="portfolio-content">
                                 
                     <!-- Portfolio filter -->
-                    <!--<ul id="portfolio_filters" class="portfolio-filters">
+                    <ul id="portfolio_filters" class="portfolio-filters">
                       <li class="active">
-                        <a class="filter btn btn-sm btn-link active" data-group="all">Tudo</a>
+                        <a class="filter btn btn-sm btn-link active" data-group="all">All</a>
                       </li>
                       <li>
-                        <a class="filter btn btn-sm btn-link" data-group="media">Web Design</a>
+                        <a class="filter btn btn-sm btn-link" data-group="nn">Neural Networks</a>
                       </li>
                       <li>
-                        <a class="filter btn btn-sm btn-link" data-group="illustration">SEO</a>
+                        <a class="filter btn btn-sm btn-link" data-group="ns">Numerical Simulations</a>
                       </li>
-                      <li>
+                      <!--<li>
                         <a class="filter btn btn-sm btn-link" data-group="video">Programação</a>
-                      </li>
-                    </ul> -->
+                      </li>-->
+                    </ul>
                     <!-- End of Portfolio filter -->
 
                     <!-- Portfolio Grid -->
-                    <!--<div id="portfolio_grid" class="portfolio-grid portfolio-masonry masonry-grid-3">-->
+                    <div id="portfolio_grid" class="portfolio-grid portfolio-masonry masonry-grid-3">
 
                       <!-- Portfolio Item 1 -->
-                      <!--<figure class="item" data-groups='["all", "media"]'>
-                        <a href="images/portfolio/full/3.jpg" class="lightbox" title="Duis Eu Eros Viverra">
-                          <img src="images/portfolio/1.jpg" alt="">
+                      <figure class="item" data-groups='["all", "ns"]'>
+                        <a href="images/portfolio/full/main_toolbox.png" class="lightbox" title="Main Screen">
+                          <img src="images/portfolio/main_toolbox.png" alt="">
                           <div>
-                            <h5 class="name">Project Name</h5>
+                            <h5 class="name">Main Screen</h5>
                             <small>Media</small>
                             <i class="fa fa-file-text-o"></i>
                           </div>
                         </a>
-                      </figure>-->
+                      </figure>
                       <!-- /Portfolio Item 1 -->
 
                       <!-- Portfolio Item 2 -->
@@ -572,142 +572,78 @@
                       <!-- /Portfolio Item 2 -->
 
                       <!-- Portfolio Item 3 -->
-                      <!--<figure class="item" data-groups='["all","illustration"]'>
-                        <a href="images/portfolio/full/3.jpg" class="lightbox" title="Duis Eu Eros Viverra">
-                          <img src="images/portfolio/3.jpg" alt="">
+                      <figure class="item" data-groups='["all","ns"]'>
+                        <a href="images/portfolio/full/harmonic_oscilator.png" class="lightbox" title="Free Damped Harmonic Oscilator">
+                          <img src="images/portfolio/harmonic_oscilator.png" alt="">
                           <div>
-                            <h5 class="name">Project Name</h5>
+                            <h5 class="name">Free Damped Harmonic Oscilator</h5>
                             <small>Illustration</small>
                             <i class="fa fa-image"></i>
                           </div>
                         </a>
-                      </figure>-->
+                      </figure>
                       <!-- /Portfolio Item 3 -->
 
                       <!-- Portfolio Item 4 -->
-                      <!--<figure class="item" data-groups='["all", "media"]'>
-                        <a href="images/portfolio/full/4.jpg" class="lightbox" title="Duis Eu Eros Viverra">
-                          <img src="images/portfolio/4.jpg" alt="">
+                      <figure class="item" data-groups='["all", "ns"]'>
+                        <a href="images/portfolio/full/wave_equation.png" class="lightbox" title="Wave Equation Screen">
+                          <img src="images/portfolio/wave_equation.png" alt="">
                           <div>
-                            <h5 class="name">Project Name</h5>
+                            <h5 class="name">Wave Equation Screen</h5>
                             <small>Media</small>
                             <i class="fa fa-file-text-o"></i>
                           </div>
                         </a>
-                      </figure>-->
+                      </figure>
                       <!-- /Portfolio Item 4 -->
 
                       <!-- Portfolio Item 5 -->
-                      <!--<figure class="item" data-groups='["all", "illustration"]'>
-                        <a href="images/portfolio/full/5.jpg" class="lightbox" title="Aliquam Condimentum Magna Rhoncus">
-                          <img src="images/portfolio/5.jpg" alt="">
+                      <figure class="item" data-groups='["all", "ns"]'>
+                        <a href="images/portfolio/full/wave_equation_results.png" class="lightbox" title="Wave Equation Results">
+                          <img src="images/portfolio/wave_equation_results.png" alt="">
                           <div>
-                            <h5 class="name">Project Name</h5>
+                            <h5 class="name">Wave Equation Results</h5>
                             <small>Illustration</small>
                             <i class="fa fa-image"></i>
                           </div>
                         </a>
-                      </figure>-->
+                      </figure>
                       <!-- /Portfolio Item 5 -->
 
                       <!-- Portfolio Item 6 -->
-                      <!--<figure class="item" data-groups='["all", "media"]'>
-                        <a href="images/portfolio/full/6.jpg" class="lightbox" title="Duis Eu Eros Viverra">
-                          <img src="images/portfolio/6.jpg" alt="">
+                      <figure class="item" data-groups='["all", "nn"]'>
+                        <a href="images/portfolio/full/seismic1.png" class="lightbox" title="Seismic Image Classification Problem">
+                          <img src="images/portfolio/seismic1.png" alt="">
                           <div>
-                            <h5 class="name">Project Name</h5>
-                            <small>Media</small>
-                            <i class="fa fa-file-text-o"></i>
+                            <h5 class="name">Seismic Image Classification Problem - Seismic 1</h5>
+                            <small>Illustration</small>
+                            <i class="fa fa-image"></i>
                           </div>
                         </a>
-                      </figure>-->
+                      </figure>
                       <!-- /Portfolio Item 6 -->
 
                       <!-- Portfolio Item 7 -->
-                      <!--<figure class="item" data-groups='["all", "video"]'>
-                        <a href="https://player.vimeo.com/video/97102654?autoplay=1" title="Nulla Facilisi" class="lightbox mfp-iframe">
-                          <img src="images/portfolio/7.jpg" alt="">
+                      <figure class="item" data-groups='["all", "nn"]'>
+                        <a href="images/portfolio/full/seismic2.png" class="lightbox" title="Seismic Image Classification Problem">
+                          <img src="images/portfolio/seismic2.png" alt="">
                           <div>
-                            <h5 class="name">Project Name</h5>
-                            <small>Video</small>
-                            <i class="fa fa-video-camera"></i>
+                            <h5 class="name">Seismic Image Classification Problem - Seismic 2</h5>
+                            <small>Illustration</small>
+                            <i class="fa fa-image"></i>
                           </div>
                         </a>
-                      </figure>-->
+                      </figure>
                       <!-- /Portfolio Item 7 -->
 
-                      <!-- Portfolio Item 8 -->
-                      <!--<figure class="item" data-groups='["all",  "media"]'>
-                       <a href="images/portfolio/full/1.jpg" class="lightbox" title="Duis Eu Eros Viverra">
-                          <img src="images/portfolio/8.jpg" alt="">
-                          <div>
-                            <h5 class="name">Project Name</h5>
-                            <small>Media</small>
-                            <i class="fa fa-file-text-o"></i>
-                          </div>
-                        </a>
-                      </figure>-->
-                      <!-- /Portfolio Item 8 -->
-
-                      <!-- Portfolio Item 9 -->
-                      <!--<figure class="item" data-groups='["all","illustration"]'>
-                        <a href="images/portfolio/full/9.jpg" class="lightbox" title="Mauris Neque Dolor">
-                          <img src="images/portfolio/9.jpg" alt="">
-                          <div>
-                            <h5 class="name">Project Name</h5>
-                            <small>Illustration</small>
-                            <i class="fa fa-image"></i>
-                          </div>
-                        </a>
-                      </figure>-->
-                      <!-- /Portfolio Item 9 -->
-
-                      <!-- Portfolio Item 10 -->
-                      <!--<figure class="item" data-groups='["all", "video"]'>
-                        <a href="https://player.vimeo.com/video/97102654?autoplay=1" title="Donec Lectus Arcu" class="lightbox mfp-iframe">
-                          <img src="images/portfolio/10.jpg" alt="">
-                          <div>
-                            <h5 class="name">Project Name</h5>
-                            <small>Video</small>
-                            <i class="fa fa-video-camera"></i>
-                          </div>
-                        </a>
-                      </figure>-->
-                      <!-- /Portfolio Item 10 -->
-
-                      <!-- Portfolio Item 11 -->
-                      <!--<figure class="item" data-groups='["all","illustration"]'>
-                        <a href="images/portfolio/full/11.jpg" class="lightbox" title="Duis Eu Eros Viverra">
-                          <img src="images/portfolio/11.jpg" alt="">
-                          <div>
-                            <h5 class="name">Project Name</h5>
-                            <small>Illustration</small>
-                            <i class="fa fa-image"></i>
-                          </div>
-                        </a>
-                      </figure>-->
-                      <!-- /Portfolio Item 11 -->
-
-                      <!-- Portfolio Item 12 -->
-                      <!--<figure class="item" data-groups='["all","media"]'>
-                        <a href="images/portfolio/full/1.jpg" class="lightbox" title="Duis Eu Eros Viverra">
-                          <img src="images/portfolio/12.jpg" alt="">
-                          <div>
-                            <h5 class="name">Project Name</h5>
-                            <small>Media</small>
-                            <i class="fa fa-file-text-o"></i>
-                          </div>
-                        </a>
-                      </figure>-->
-                      <!-- /Portfolio Item 12 -->
-                    <!--</div>-->
+                    </div>
                     <!-- /Portfolio Grid -->
 
-                  <!--</div>-->
+                  </div>
                   <!-- /Portfolio Content -->
-                <!--</div>
+                </div>
               </div>
-            </section>-->
+            </section>
             <!-- /Portfolio Subpage -->
 
           </div>
