--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <h1>Edvaldo Melo</h1>
                         <div class="owl-carousel text-rotation">                                    
                           <div class="item">
-                            <div class="sp-subtitle">Backend Developer</div>
+                            <div class="sp-subtitle">Developer</div>
                           </div>
                           <div class="item">
                             <div class="sp-subtitle">Computational Mathematician</div>
@@ -111,9 +111,9 @@
                         </div>
                       </div>
 
-                      <div class="social-links">
+                      <!-- <div class="social-links">
                         <a href="https://www.facebook.com/edvaldo.francisco.904?ref=bookmarks" target="_blank"><i class="fa fa-facebook"></i></a>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </div>
@@ -126,7 +126,7 @@
                         <div class="block-title">
                           <h3>Who <span>am I?</span></h3>
                         </div>
-                        <p>Hello! I am Edvaldo Melo. I'm graduate in Computational Mathematics from the Federal University of Parapiba (UFPB).
+                        <p>Hello! I am Edvaldo Melo. I'm graduate in Computational Mathematics from the Federal University of Paraíba (UFPB).
                           Master's student in Informatics at UFPB. Developer using Python, C or Matlab. I have experience in neural networks, 
                           such as CNN, LSTM, among others.
                         </p>
@@ -141,9 +141,9 @@
                       <ul class="info-list">
                         <li><span class="title">Age</span><span class="value">24</span></li>
                         <li><span class="title">Nationality</span><span class="value">Brazilian</span></li>
-                        <li><span class="title">City/State</span><span class="value">Ferreiros, PE</span></li>
+                        <li><span class="title">City/State</span><span class="value">Ferreiros - PE</span></li>
                         <li><span class="title">Email</span><span class="value">emeloppgi@gmail.com</span></li>
-                        <li><span class="title">Phone</span><span class="value">+5581 9 9294-6090</span></li>
+                        <li><span class="title">Phone</span><span class="value">+55 81 9 9294-6090</span></li>
                         <!-- <li><span class="title">Freelance</span><span class="value available">Available</span></li> -->
                       </ul>
                     </div>
