Editing the curriculum section

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                             <h4 class="item-title">Machine Learning and Digital Petrophysics</h4>
                             <span class="item-period">2017 - 2020</span>
                             <span class="item-small">LaMEP</span>
-                            <p class="item-description">Member of the research team, developing a research project for CENPES/PETROBRÁS. <br>
+                            <p class="item-description">Responsible for using Artificial Neural Networks in the development of the research project for CENPES / PETROBRÁS. <br>
                               <a href="http://lamep.ci.ufpb.br/" target="_blank">LaMEP</a> Website.
                             </p>
                           </div>
@@ -239,7 +239,7 @@
                             <h4 class="item-title">Predominant Pore Direction: A 2D Thin Section Approach Applied to Reservoir Rock Core Samples</h4>
                             <span class="item-period">2019</span>
                             <span class="item-small">10º PDPetro</span>
-                            <p class="item-description">Sorts the Direction (Vertical, Horizontal, Diagonal) of Each Pixel in a 2D Image.<br>
+                            <p class="item-description">Sorts the direction (Vertical, Horizontal, Diagonal) of each pixel in a 2D image.<br>
                               <a href="http://www.portalabpg.org.br/site_portugues/anais/anais10/repositorio/trabalho/025502190820199193.pdf" target="_blank">Article</a> Link.
                               <a href="http://www.portalabpg.org.br/site_portugues/eventos.html" target="_blank">ABPG</a> website.
                             </p>
@@ -252,7 +252,7 @@
                               Reservoir Rock Core Samples</h4>
                             <span class="item-period">2020</span>
                             <span class="item-small">EAGE</span>
-                            <p class="item-description">Sorts the Direction (Vertical, Horizontal, Diagonal) of Each Pixel in a 2D Image.
+                            <p class="item-description">Sorts the direction (Vertical, Horizontal, Diagonal) of each pixel in a 2D image.
                               Two Study Case: Berea Sandstone and CarbonateC1.<br>
                               <a href="https://www.earthdoc.org/content/papers/10.3997/2214-4609.2020603010" target="_blank">Article</a> Link.
                               <a href="https://eage.eventsair.com/rock-physics-2019/" target="_blank">EAGE</a> website.
