--- a/index.html
+++ b/index.html
@@ -166,25 +166,25 @@
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
                         <div class="block-title">
-                          <h3>Education</h3>
+                          <h3>Academic Education</h3>
                         </div>
 
                         <div class="timeline">
                           <!-- Education 1 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Bachelor of Computational Mathematics</h4>
-                            <span class="item-period">2013 - 2018</span>
-                            <span class="item-small">UFPB</span>
-                            <p class="item-description">Graduation in Federal University of Paraíba, João Pessoa - PB.</p>
+                            <h4 class="item-title">Master's Student in Informatics</h4>
+                            <span class="item-period">2019 - Current</span>
+                            <span class="item-small">UFPB.</span>
+                            <p class="item-description">Master's degree in the Postgraduate Program in Informatics (PPGI) - UFPB, João Pessoa - PB.</p>
                           </div>
                           <!-- / Education 1 -->
 
                           <!-- Education 2 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Master's Student in Informatics</h4>
-                            <span class="item-period">2019 - Current</span>
-                            <span class="item-small">UFPB.</span>
-                            <p class="item-description">Master's degree in the Postgraduate Program in Informatics (PPGI) - UFPB, João Pessoa - PB.</p>
+                            <h4 class="item-title">Bachelor of Computational Mathematics</h4>
+                            <span class="item-period">2013 - 2018</span>
+                            <span class="item-small">UFPB</span>
+                            <p class="item-description">Graduation in Federal University of Paraíba, João Pessoa - PB.</p>
                           </div>
                           <!-- / Education 2 -->
                         </div>
