Adding github in Home

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         <li><span class="title">City/State</span><span class="value">Ferreiros - PE</span></li>
                         <li><span class="title">Email</span><span class="value">emeloppgi@gmail.com</span></li>
                         <li><span class="title">Phone</span><span class="value">+55 81 9 9294-6090</span></li>
-                        <!-- <li><span class="title">Freelance</span><span class="value available">Available</span></li> -->
+                        <li><span class="title">Github</span><span class="value available">https://github.com/EFMelo</span></li>
                       </ul>
                     </div>
 
