Correcting the article description

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                             <span class="item-period">2020</span>
                             <span class="item-small">EAGE</span>
                             <p class="item-description">Sorts the direction (Vertical, Horizontal, Diagonal) of each pixel in a 2D image.
-                              Two Study Case: Berea Sandstone and CarbonateC1.<br>
+                              Two Case Studies: Berea Sandstone and Carbonate C1.<br>
                               <a href="https://www.earthdoc.org/content/papers/10.3997/2214-4609.2020603010" target="_blank">Article</a> Link.
                               <a href="https://eage.eventsair.com/rock-physics-2019/" target="_blank">EAGE</a> website.
                             </p>
